# ML-of-text-pancreatic-cancer

./: ML_pancreas_1.ipynb  app.py  package-lock.json  pyproject.toml  xgboost_model.pkl
pan-prognosis-main/: package-lock.json
pan-prognosis-main/src/components/: AddPatient.tsx  BiomarkerIndicators.tsx  ClinicalTabs.tsx
